@@ -22,6 +22,7 @@ procps-ng-NEXT
   * top: address a wishlist man page NLS suggestion        Debian #865689
   * top: fix potential distortion in 'Mem' graph display   issue #64
   * watch: define HOST_NAME_MAX where not defined          Debian #830734
+  * vmstat: Fix alignment for disk partition format        issue #69
 
 procps-ng-3.3.12
 ----------------
